k8s-mediaserver/bazarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: bazarr
    port: 6767
    protocol: TCP
    targetPort: 6767
  selector:
    app: bazarr
  sessionAffinity: None
  type: ClusterIP
