k8s-mediaserver/bazarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: 
    - websecure
  routes:
    - match: Host(`bazarr.local.izroll.dev`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: local-izroll-dev-tls
